creating scm branch, and new jenkins job pointing to  new scm path